hphp/hack/test/typecheck/object_cast.php.exp
File "object_cast.php", line 4, characters 9-14:
Object casts are unsupported. (Naming[2055])
