hphp/hack/test/typecheck/object_cast.php
<?hh // strict

function foo(mixed $x): void {
  $y = (object)$x;
}
